# HW

./: README.md
Light_detection/: CMakeLists.txt  README.md
Light_detection/includes/Light_detection/: Light_detection.hpp
Light_detection/src/: ChannelSubtraction.cpp  Light_detection.cpp
cmake_training/: README.md  main.cpp
homework1/: CMakeLists.txt  README.md  armor.hpp  detector.cpp  detector.hpp  main.cpp  reference.cpp
homework1/cameraOpen/64/: CommonParameters.ini
homework1/cameraOpen/include/: CameraParams.h  MvCameraControl.h  MvErrorDefine.h  MvObsoleteInterfaces.h  ObsoleteCamParams.h
light_bar_matching/: CMakeLists.txt  armor.hpp  detector.cpp  main.cpp
